SERVER-71053 Fix WiredTigerRecordStore dataSize inconsistent

(cherry picked from commit 556bf6acd152734c99160bf5cc4f4bb362b5235c)